Mon Apr  2 14:25:49 2001  Shugo Maeda <shugo@ruby-lang.org>

	* lib/monitor.rb (wait): ensure reentrance.

	* lib/monitor.rb (wait): fix timeout support.

Mon Apr  2 12:44:53 2001  Shugo Maeda <shugo@ruby-lang.org>

	* lib/net/imap.rb: backport from ruby-1.7.

Mon Apr  2 01:16:24 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c: use ruby's opendir on mingw32.

	* missing/dir.h, dir.c, Makefile: ditto.

Wed Mar 28 23:43:00 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ext/extmk.rb.in, lib/mkmf.rb: add C++ rules in addition to C
	rules for the mswin32 platforms.

Wed Mar 28 19:29:21 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/extmk.rb.in, lib/mkmf.rb: move C++ rules to the right place.

Wed Mar 28 17:39:04 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (rb_str2cstr): warn if string contains \0 and length
	  value is ignored.

Wed Mar 28 15:00:31 2001  K.Kosako  <kosako@sofnec.co.jp>

	* class.c (rb_singleton_class_clone): should copy class constant
	  table as well.

Wed Mar 28 15:03:23 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): sometimes cache was mistakenly left
	  uncleared - based on the patch by K.Kosako.

Wed Mar 28 09:52:33 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/Makefile.sub: disable global optimization.

Tue Mar 27 15:00:54 2001  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (rb_mod_define_method): should have clear method cache.

	* eval.c (rb_mod_define_method): should have raised exception for
	  type error.

Tue Mar 27 14:48:17 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.h: changed "extern INLINE" to "static inline".

Mon Mar 26 23:19:33 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* time.c (rb_strftime): check whether strftime returns empty string.

Mon Mar 26 18:14:47 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (rb_glob_helper): part of 1.7 globber backported to proper
	  following of symlinks.
