@@ -375,8 +375,10 @@ def create_makefile(target)
 
   defflag = ''
   if RUBY_PLATFORM =~ /cygwin|mingw/ and not $static
-    open(target + '.def', 'wb') do |f|
-      f.print "EXPORTS\n", "Init_", target, "\n"
+    if not File.exist? target + '.def'
+      open(target + '.def', 'wb') do |f|
+        f.print "EXPORTS\n", "Init_", target, "\n"
+      end
     end
     defflag = "--def=" + target + ".def"
   end
